# auto-gpt

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/agents/: manager.rs  mod.rs
src/helpers/: general.rs  mod.rs  terminal.rs
src/models/general/: llm.rs
src/services/: call_request.rs
